--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -26,7 +26,7 @@
             <button class="start-btn-mobile" 
                     (click)="isMobile && selectedScanMethod === 'camera' ? startCameraScanning() : startBatchScanningMode()"
                     title="Bắt đầu chế độ scan">
-              <i class="material-icons">{{ isMobile && selectedScanMethod === 'camera' ? 'camera_alt' : 'play_arrow' }}</i>
+              <i class="material-icons">play_arrow</i>
               <span>Start</span>
             </button>
           </div>
